<resources>
    <string name="app_name">AMST7</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingrese_contrase_a">Ingrese Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="registrate">Registrate</string>
    <string name="confirmar">Confirmar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="contrase_a_de_usuario">Contraseña de usuario</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="celular">Celular</string>
    <string name="categoria_favorita">Categoria Favorita</string>
    <string name="usuario_de_registro">Usuario de registro</string>
    <string name="perfil">Perfil</string>
    <string name="exit">exit</string>
    <string name="apellidos">Apellidos:</string>
    <string name="correo">Correo:</string>
    <string name="favorito">Favorito:</string>
    <string name="textview">TextView</string>
    <string name="avatar">avatar</string>
    <string name="nombres">Nombres</string>
    <string name="categor_as">Categorías</string>
    <string name="escoja_su_categor_a_favorita">Escoja su categoría favorita</string>
    <string name="romantico">romantico</string>
    <string name="rom_ntico">ROMÁNTICO</string>
    <string name="prueba">prueba</string>
    <string name="terror">TERROR</string>
    <string name="it">it</string>
    <string name="quijote">quijote</string>
    <string name="aventura">AVENTURA</string>
    <string name="juvenil">juvenil</string>
    <string name="juvenilText">JUVENIL</string>
    <string name="botonperfilCat">botonPerfil</string>
    <string name="botonhomeCat">botonHome</string>
    <string name="botoncatCat">botonCat</string>
    <string name="inicio">inicio</string>
    <string-array name="sexo">
        <item>Sexo</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="generos">
        <item>Género</item>
        <item>Romance</item>
        <item>Terror</item>
        <item>Aventura</item>
        <item>Juvenil</item>
    </string-array>
</resources>