<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logota5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top|center_vertical"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/actor"
        android:text="@string/iniciar_sesi_n"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/nomusu"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="65dp"
        android:autofillHints=""
        android:background="@drawable/custome_edit_text_bg"
        android:drawableStart="@drawable/ic_username"
        android:ems="10"
        android:fontFamily="@font/actor"
        android:hint="@string/nombre_de_usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/contras"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/custome_edit_text_bg"
        android:drawableStart="@drawable/ic_pass"
        android:ems="10"
        android:fontFamily="@font/actor"
        android:hint="@string/ingrese_contrase_a"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/ingreso"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/botones"
        android:fontFamily="@font/actor"
        android:onClick="ingresar"
        android:text="@string/ingresar"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/registro"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/botones"
        android:fontFamily="@font/actor"
        android:onClick="registro"
        android:text="@string/registrarse"
        android:textColor="#FFFFFF" />

</LinearLayout>