<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#277480"
    android:divider="@drawable/ic_launcher_background"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity7">

    <TextView
        android:id="@+id/categoriaEncabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="#277480"
        android:fontFamily="@font/actor"
        android:gravity="center_vertical"
        android:text="@string/categor_as"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imageRomantico"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/romantico"
                    android:onClick="romance"
                    android:src="@drawable/tresmetros" />

                <TextView
                    android:id="@+id/textRomantico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/almendra_sc"
                    android:gravity="center_horizontal"
                    android:text="@string/rom_ntico"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/imageeTerror"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/it"
                    android:onClick="terror"
                    android:src="@drawable/it" />

                <TextView
                    android:id="@+id/textTerror"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/caesar_dressing"
                    android:text="@string/terror"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/imageAventura"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/quijote"
                    android:onClick="aventura"
                    android:src="@drawable/quijotee" />

                <TextView
                    android:id="@+id/textAventura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/aventura"
                    android:textColor="#131313"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <ImageButton
                    android:id="@+id/imageJuvenil"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:contentDescription="@string/juvenil"
                    android:onClick="juvenil"
                    android:src="@drawable/eleanorparkaaa" />

                <TextView
                    android:id="@+id/textJuvenil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/juvenilText"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="@drawable/style_borde"
            android:contentDescription="@string/botonperfilCat"
            app:srcCompat="@drawable/perfil" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="@drawable/style_borde"
            android:contentDescription="@string/botonhomeCat"
            app:srcCompat="@drawable/home" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="1"
            android:background="@drawable/style_borde"
            android:contentDescription="@string/botoncatCat"
            app:srcCompat="@drawable/cat" />
    </LinearLayout>

</LinearLayout>