<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity6">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="340dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C55F57"
            android:text="@string/perfil"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#C55F57"
            android:contentDescription="@string/exit"
            android:src="@drawable/ic_exit"

            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="143dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/avatar" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="39dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="serif-monospace"
            android:text="Usuario"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="573dp"
        android:animationCache="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            android:cursorVisible="false"
            android:fontFamily="serif-monospace"
            android:text="Nombres:"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            android:fontFamily="serif-monospace"
            android:text="Apellidos:"
            android:textAlignment="center"
            android:textColor="#0B0A0A"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            android:fontFamily="serif-monospace"
            android:text="Correo:"
            android:textAlignment="center"
            android:textColor="#090909"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            android:fontFamily="serif-monospace"
            android:text="@string/celular"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            android:fontFamily="serif-monospace"
            android:text="Favorito:"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="200dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="200dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="200dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="200dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="200dp"
            android:background="@drawable/style_borde"
            android:backgroundTint="#FFCC80"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>